# penumbra

./: .gitignore  CLAUDE.md  README.md  demo_spinner.py  nextsteps.md  pyproject.toml  temp.md
docs/: README.md  amsi-bypass.md  clm-bypass.md  lolbas.md  pipelines.md  process-injection.md  ps1-loader.md  uac-bypass.md  vbs-pipeline.md
dotnet-worker/: PenumbraHelpers.cs  Program.cs  dotnet-worker.csproj
dotnet-worker/Passes/: DInvokePass.cs  EncryptStringsPass.cs  RenamePass.cs  ScrubGuidPass.cs  Shared.cs  StripDebugPass.cs  TrojanizePass.cs
penumbra/: __init__.py  cli.py  detector.py  pipeline.py  spinner.py  types.py
penumbra/dotnet/: __init__.py  _loader_utils.py  clm_bypass.py  embed.py  il_worker.py  lolbas.py
penumbra/dotnet/worker/: Program.cs  dotnet-worker.csproj
penumbra/dotnet/worker/Passes/: EncryptStringsPass.cs  FlowPass.cs
penumbra/pe/: __init__.py
penumbra/ps/: __init__.py  amsi.py  assembly_loader.py  encode.py  rename.py  tokenize.py  uac.py
penumbra/script/: __init__.py  encode.py  wrap.py
penumbra/shellcode/: __init__.py  encrypt.py  inject.py  loader.py
penumbra/vbs/: __init__.py  encode.py  wrap.py
tests/: conftest.py  test_clm_bypass.py  test_detector.py  test_dotnet_il.py  test_lolbas.py  test_pipeline.py  test_ps1_assembly_loader.py  test_ps_amsi.py  test_ps_amsi_techniques.py  test_ps_encode.py  test_ps_integration.py  test_ps_rename.py  test_ps_tokenize.py  test_script.py  test_shellcode.py  test_shellcode_inject.py  test_uac.py  test_vbs.py
tests/fixtures/: complex.ps1  hello.ps1  hello.py  hello.sh
tools/ildump/: ILDump.csproj  Program.cs
